--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "google/auth": "^1.34",
+        "guzzlehttp/guzzle": "^7.8",
         "hasnayeen/themes": "^3.0",
         "jeffgreco13/filament-breezy": "v2.2.1.1",
         "laravel/framework": "^10.10",
